# streamlit-sample

./: app.py  pyproject.toml  retriever.py
data/: faq_document.pkl
